front-envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/discovery/DiscoveryA"
                route:
                  cluster: discoveryA
              - match:
                  prefix: "/discovery/DiscoveryB"
                route:
                  cluster: discoveryB
              - match:
                  prefix: "/discovery/DiscoveryC"
                route:
                  cluster: discoveryC
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: discoveryA
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: discoveryA
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: discovery-a
                port_value: 8000
  - name: discoveryB
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: discoveryB
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: discovery-b
                port_value: 8000
  - name: discoveryC
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: discoveryC
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: discovery-c
                port_value: 8000
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      envoy:
        resource_limits:
          listener:
            example_listener_name:
              connection_limit: 10000
